--- a/slides.ipynb
+++ b/slides.ipynb
@@ -37,7 +37,7 @@
     }
    },
    "source": [
-    "Hello everyone! My name is Amit Saha and today I am here to talk to about \"Doing Math with Python\".\n",
+    "Hello everyone! My name is Dr Amit Saha and today I am here to talk to about \"Doing Math with Python\".\n",
     "\n",
     "Thank you for coming to my talk - i know you could have chosen the other talk, so it's good to know that my talk's topic interests you.\n",
     "\n",
